# tensorrt_cross_valid

./: .gitignore  CMakeLists.txt  main.cpp  test.txt
tensorrt/: CMakelists.txt  buffer.h  common.h  params.h  read_file_params.cpp  tensorrt.cpp  tensorrt.h
